--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.4.5",
     "glob": "^7.1.3",
     "vue": "^2.5.17",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
