--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
 NODE_ENV=local
-VUE_APP_BASE_URL = '/api'
+VUE_APP_BASE_URL = 'http://api2.jierutek.com:8080/api'
+VUE_APP_TEST_ENTID = '10205'
+VUE_APP_TEST_ORGID = ''
