--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
+    "underscore": "^1.9.1",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-eslint-parser": "^3.2.2",
     "vue-template-compiler": "^2.5.17",
