--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 VUE_APP_BASE_URL = '此处填生产环境接口URL'
-VUE_APP_BASE_URL = 'http://api2.jierutek.com/api'
+VUE_APP_BASE_URL = 'http://api2.jierutek.com:8080/api'
